# taxi_demand_predictor

./: .gitignore  README.md  pyproject.toml  requirements.txt
etl/: extract.py  filtering.py  transform.py
notebooks/: 01_load_and_validate_raw_data.ipynb  02_transform_filtered_data_into_ts_data.ipynb  03_transform_ts_into_tabular_data.ipynb  04_build_ml_model.ipynb  04_visualize_training_data.ipynb  05_build_ml_model.ipynb  06_xgboost_model.ipynb  07_lgbm_model.ipynb  08_lgbm_with_feature_eng.ipynb  09_lgbm_with_hp_tuning.ipynb  10_backfill_feature_store.ipynb  10_mlops.ipynb  11_feature_pipeline.ipynb
src/: config.py  extract.py  feature_engineering.py  filtering.py  load.py  logger.py  metaflow_pipeline.py  model.py  paths.py  pipeline.py  plot.py  training.py  transform.py
