[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["igor-personal <icaetanodiniz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.1.1"
requests = "^2.32.3"
pyarrow = "^17.0.0"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
