[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["igor-personal <icaetanodiniz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.1.1"
requests = "^2.32.3"
pyarrow = "^17.0.0"
pandas = "^2.2.3"
plotly = "^5.24.1"
matplotlib = "^3.9.2"
tqdm = "^4.66.5"
scikit-learn = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
